Fix spacing on product detail

--- a/src/styles/components/options.scss
+++ b/src/styles/components/options.scss
@@ -5,7 +5,7 @@
 $spacing: 5px;
 
 .option-value-list {
-  font-size: $font-size-small;
+  font-size: $font-size-xsmall;
   margin-left: -#{$spacing};
   margin-right: -#{$spacing};
 }
